# handwriter

./: .gitignore  .pre-commit-config.yaml  Handwriter.spec  README.md  README_en.md  pyproject.toml  requirements.txt  resources.qrc  vulture_whitelist.py
.github/: FUNDING.yml
.github/workflows/: build.yml
handwriter/: main.py
handwriter/engine/: __init__.py  gcode_exporter.py  layout_engine.py  renderer.py  svg_exporter.py
handwriter/models/: __init__.py  hfont.py  hwdoc.py  presets.py
handwriter/translations/: translate.py
handwriter/views/: document_editor.py  document_editor.qss  export_dialog.py  export_dialog.qss  font_editor.py  font_editor.qss  main_window.py  main_window.qss  theme.py
img/: handwriter.icns
setup/: AppRun  handwriter.desktop  handwriter.xml  installer.iss  linux_setup.sh  macos_setup.sh  update_plist.py
