[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handwriter"
version = "1.0"
description = "Handwritten text editor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.5.0",
    "svgpathtools>=1.6.0",
    "pyphen>=0.16.0",
    "svgwrite>=1.4.0",
    "qtawesome>=1.3.1",
]

[project.scripts]
handwriter = "handwriter.main:main"

[project.gui-scripts]
handwriter-gui = "handwriter.main:main"

[tool.setuptools.packages.find]
include = ["handwriter*"]

[tool.vulture]
min_confidence = 80
paths = ["handwriter", "vulture_whitelist.py"]